# Muara-Game

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  muara.spec  package-lock.json  package.json  pyproject.toml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/agents_md_housekeeping_20260714/: index.md  metadata.json  plan.md  spec.md
conductor/archive/dedupe-execute-hooks_20260715/: index.md  metadata.json  spec.md
conductor/code_styleguides/: pydantic.md  python.md
content/: events.yaml  manifest.yaml  npcs.yaml
content/chapters/: 01_pembukaan.yaml  02_gejala.yaml  03a_mandor.yaml  03b_sembunyi.yaml  03b_ungkap.yaml  03c_sembunyi.yaml  03c_ungkap.yaml  04a_puncak_lapor.yaml  04b_puncak_aman.yaml  04c_puncak_bukti.yaml  04d_puncak_hilang.yaml  05_perhitungan.yaml  06_penutup.yaml  07_akibat.yaml  08_tekanan.yaml  09_pilihan_sulit.yaml  10_konfrontasi.yaml  11_warisan.yaml
docs/: 00_WORLD_BIBLE.md  01_CHARACTER_PLOT_BRIEF.md  02_TECHNICAL_ARCHITECTURE.md
src/muara/: constants.py  gui_cli.py  main.py
tests/: conftest.py  test_chapter_loader.py  test_conditions.py  test_content_integrity.py  test_ending_texts.py  test_engine.py  test_event_loader.py  test_event_scheduler.py  test_gui.py  test_hook_parity.py  test_main.py  test_models.py  test_narrative_expansion.py  test_narrative_graph.py  test_new_features.py  test_npc_loader.py  test_npc_models.py  test_performance_benchmarks.py  test_renderer.py  test_save_migration_v3.py  test_state_helpers.py  test_world_clock.py
(+42 files in other folders)
